2006-01-31  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h, include/infiniband/driver.h: Remove
	useless "extern" from function declarations.

2006-01-26  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/driver.h, src/cmd.c (ibv_cmd_resize_cq): Add
	driver interface for calling resize CQ kernel command.

	* include/infiniband/kern-abi.h: Add resize CQ kernel ABI.

	* include/infiniband/verbs.h, src/verbs.c (ibv_resize_cq): Add
	resize CQ library API.  This changes the provider ABI, since a new
	field is added to struct ibv_context_ops; source compatibility
	with provider libraries is preserved, but binaries will have to be
	recompiled.  Neither source nor binary compatibility with
	consumers of libibverbs is affected.

2006-01-25  Roland Dreier  <rdreier@cisco.com>

	* examples/pingpong.c, examples/pingpong.h,
	examples/rc_pingpong.c, examples/uc_pingpong.c,
	examples/srq_pingpong.c: Move pp_get_local_lid() to pingpong.c to
	reduce code duplication.

2006-01-22  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc5.

2006-01-22  Dotan Barak  <dotanb@mellanox.co.il>

	* examples/devinfo.c (main): Make ibv_devinfo list all IB devices
	by default, rather than the first device only.

2006-01-20  Roland Dreier  <rdreier@cisco.com>

	* examples/rc_pingpong.c, examples/uc_pingpong.c,
	examples/srq_pingpong.c: Add "-m/--mtu=" option to set path MTU.
	(Based on a patch from Ralph Campbell <ralphc@pathscale.com>)

	* examples/pingpong.c, examples/pingpong.h: Create generic
	pingpong files so that we can start factoring out common code from
	the pingpong examples.  Start with functions to convert MTU to an
	IBV enum value.

2006-01-17  Ralph Campbell  <ralphc@pathscale.com>

	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
	examples/uc_pingpong.c (main), examples/ud_pingpong.c (main): Fix
	race when using CQ events by arming CQ before allowing remote side
	to start sending.

2006-01-06  Roland Dreier  <rdreier@cisco.com>
